apply main page carousel

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,6 +8,6 @@ spring.datasource.password=testpass
 #spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
 
 # HTML <FORM>에서 th:method에서 PUT 또는 DELETE를 사용해서 보내는 _method를사용해서 @PutMapping과 @DeleteMapping으로 요청을 맵핑.
-spring.mvc.hiddenmethod.filter.enabled=true
+#spring.mvc.hiddenmethod.filter.enabled=true
 
 spring.jpa.properties.hibernate.format_sql=true
